...
    android:layout_height="match_parent"
    android:background="@color/background_accueil"
    tools:context=".InfoExcursion">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
...
                android:textColor="@color/snow"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TableLayout
                android:id="@+id/tl_excursion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10pt"
                android:background="@color/snow"
                tools:ignore="UnknownId">

...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/distance"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_distanceValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/duree"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_dureeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/deniveleMonte"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_monteeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/deniveleDescente"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_descenteValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/typeP"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_typePValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/hostilite"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_hostiliteValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/difficulteT"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_difficulteTValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/difficulteOrientation"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_difficulteOValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/Effort"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_effortValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
...
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button3"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/snow"
        android:onClick="onClikCarte"
        android:text="@string/boutonCarte"
...
