...
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/b_francais"
        android:layout_width="192dp"
        android:layout_height="99dp"
        android:backgroundTint="@color/forestgreen"
        android:onClick="onClik"
        android:text="@string/boutonFr"
        android:textColor="@color/white"
...
