...


    <string name="carte">Carte</string>
    <string name="retour">Retour</string>
    <string name="google_maps_key">AIzaSyCCwj5mKibIqeZdlc5Ni8D-64-qpCYQ1CM</string>
    <string name="titreApp">Vallée de Pineta</string>
    <string name="boutonFr">Liste des excursions et ascensions</string>
    <string name="boutonEsp">Lista de excursiones y ascentiones</string>
    <string name="nomTabEx">Nom</string>
    <string name="valleeTabEx">Vallée</string>
    <string name="deniveleeTabEx">Dénivelée</string>
    <string name="titreEx">Excursions et ascensions à Pineta et ses alentours</string>
    <string name="pasExcursion"> aucune excursion</string>
...
    <string name="deniveleDescente">Dénivelé de descente</string>
    <string name="typeP">Type du Parcours</string>
    <string name="hostilite">Hostiltié du milieu</string>
    <string name="difficulteT">Difficulté technique</string>
    <string name="difficulteOrientation">Difficulté d\'orientation</string>
    <string name="Effort">Effort nécessaire</string>
    <string name="boutonCarte">Y aller !</string>
    <string name="GPStext">Le GPS est inactif, voulez-vous l\'activer ? </string>
    <string name="GPSOui">Activer GPS </string>
    <string name="GPSNon"> Ne pas l\'activer </string>
</resources>
